Fixed scaling on mobile

--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@
     margin-bottom: 15px;
     margin-top: 10px;
     text-align: center;
-    width: 800px;
+    width: 100%;
     height: 45px;font-size: 25px;
 }
 
-.text1 {
+.text1,
+text2 {
     margin-left: 125px;
     margin-bottom: 15px;
     padding: 5px;
@@ -65,12 +66,16 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-grow: 1;
 }
 
 .container ol {
     margin-right: 40px;
 }
 
-
+.text2 {
+    margin-left: 20%;
+    margin-bottom: 20px;
+}
 
 
